manifest/ingress/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://publitech-client.vercel.app"
    # nginx.ingress.kubernetes.io/enable-access-log: "true" 
    nginx.ingress.kubernetes.io/websocket-services: "hy-hire-job-service"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: shoex.online
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: hy-hire-auth-service
                port:
                  number: 4001
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: hy-hire-user-service
                port:
                  number: 4006
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hy-hire-notification-service
                port:
                  number: 4002
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: hy-hire-job-service
                port:
                  number: 4007
          - path: /api/job
            pathType: Prefix
            backend:
              service:
                name: hy-hire-job-service
                port:
                  number: 4007
          - path: /api/company
            pathType: Prefix
            backend:
              service:
                name: hy-hire-company-service
                port:
                  number: 4005
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: hy-hire-auth-service
                port:
                  number: 4001
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: hy-hire-user-service
                port:
                  number: 4006
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hy-hire-notification-service
                port:
                  number: 4002
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: hy-hire-job-service
                port:
                  number: 4007
          - path: /api/job
            pathType: Prefix
            backend:
              service:
                name: hy-hire-job-service
                port:
                  number: 4007
          - path: /api/company
            pathType: Prefix
            backend:
              service:
                name: hy-hire-company-service
                port:
                  number: 4005
